--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -12,6 +12,7 @@ spec:
   workspaces:
     - name: pipeline-workspace
   params:
+    - name: build-image
     - name: repo-url
     - name: branch
       default: main
@@ -63,4 +64,18 @@ spec:
       - name: args
         value: "-v --with-spec --spec-color"
       runAfter:
-        - clone    
+        - clone
+
+    - name: build
+      workspaces:
+        - name: source
+          workspace: pipeline-workspace
+      taskRef:
+        name: buildah
+        kind: ClusterTask
+      params:
+      - name: IMAGE
+        value: "$(params.build-image)"
+      runAfter:
+        - tests
+        - lint     
